--- a/DropBear.Blazor/Components/Buttons/DropBearNavigationButtons.razor.css
+++ b/DropBear.Blazor/Components/Buttons/DropBearNavigationButtons.razor.css
@@ -1,19 +1,19 @@
 ﻿.navigation-buttons {
   position: fixed;
-  z-index: var(--z-index-fixed);
+  z-index: var(--z-40);
 }
 
 .nav-button {
   position: fixed;
-  background-color: var(--clr-viking);
-  color: var(--clr-text-white);
+  background-color: var(--clr-primary);
+  color: var(--clr-white);
   border: none;
   border-radius: 50%;
   width: 50px;
   height: 50px;
   font-size: 24px;
   cursor: pointer;
-  box-shadow: var(--shadow-md);
+  box-shadow: var(--bs-md);
   transition: background-color var(--transition-fast), transform var(--transition-fast);
   display: flex;
   align-items: center;
@@ -21,7 +21,7 @@
 }
 
 .nav-button:hover {
-  background-color: var(--clr-malibu);
+  background-color: var(--clr-information);
   transform: scale(1.1);
 }
 
