--- a/DropBear.Blazor/Components/Alerts/DropBearPageAlertContainer.razor.css
+++ b/DropBear.Blazor/Components/Alerts/DropBearPageAlertContainer.razor.css
@@ -5,9 +5,9 @@
   transform: translateX(-50%);
   display: flex;
   flex-direction: column;
-  gap: var(--gap);
+  gap: var(--spacing-md);
   width: 100%;
   max-width: 500px; /* Adjust max-width as needed */
-  z-index: var(--z-index-sticky);
-  padding: var(--padding-default);
+  z-index: var(--z-50);
+  padding: var(--spacing-md);
 }
