--- a/DropBear.Blazor/Components/Buttons/DropBearButton.razor.css
+++ b/DropBear.Blazor/Components/Buttons/DropBearButton.razor.css
@@ -1,11 +1,11 @@
 ﻿/* Button Base Styles */
 .dropbear-btn {
   font-family: var(--font-family), sans-serif;
-  font-size: var(--font-size-md);
+  font-size: var(--fs-md);
   font-weight: 500;
   line-height: 1.5;
-  padding: var(--padding-default);
-  border-radius: var(--border-radius-md);
+  padding: var(--spacing-md);
+  border-radius: var(--br-md);
   cursor: pointer;
   transition: all var(--transition-fast);
   display: inline-flex;
@@ -37,25 +37,25 @@
 
 .dropbear-btn:focus-visible {
   outline: none;
-  box-shadow: 0 0 0 3px rgba(var(--clr-malibu), 0.5);
+  box-shadow: 0 0 0 3px rgba(var(--clr-information), 0.5);
 }
 
 /* Button Sizes */
 .dropbear-btn-small {
-  font-size: var(--font-size-sm);
-  padding: calc(var(--padding-top) * 0.75) calc(var(--padding-left) * 0.75);
-  border-radius: calc(var(--border-radius-md) * 0.75);
+  font-size: var(--fs-sm);
+  padding: calc(var(--spacing-md) * 0.75) calc(var(--spacing-md) * 0.75);
+  border-radius: calc(var(--br-md) * 0.75);
 }
 
 .dropbear-btn-large {
-  font-size: var(--font-size-lg);
-  padding: calc(var(--padding-top) * 1.25) calc(var(--padding-left) * 1.25);
-  border-radius: calc(var(--border-radius-md) * 1.25);
+  font-size: var(--fs-lg);
+  padding: calc(var(--spacing-md) * 1.25) calc(var(--spacing-md) * 1.25);
+  border-radius: calc(var(--br-md) * 1.25);
 }
 
 /* Button Variants */
 .dropbear-btn-solid {
-  color: var(--clr-text-black);
+  color: var(--clr-black);
   background-color: var(--button-bg-color);
   border-color: var(--button-bg-color);
 }
@@ -75,14 +75,14 @@
 }
 
 .dropbear-btn-outline:hover:not(.dropbear-btn-disabled) {
-  color: var(--clr-text-white);
+  color: var(--clr-white);
   background-color: var(--button-bg-color);
   transform: translateY(-2px);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .dropbear-btn-icononly {
-  padding: var(--padding-top);
+  padding: var(--spacing-md);
   aspect-ratio: 1;
 }
 
@@ -93,43 +93,43 @@
 
 /* Button Colors */
 .dropbear-btn-default {
-  --button-bg-color: var(--clr-viking);
-  --button-hover-bg-color: var(--clr-rock-blue);
+  --button-bg-color: var(--clr-primary);
+  --button-hover-bg-color: var(--clr-secondary);
 }
 
 .dropbear-btn-primary {
-  --button-bg-color: var(--clr-viking);
-  --button-hover-bg-color: var(--clr-rock-blue);
+  --button-bg-color: var(--clr-primary);
+  --button-hover-bg-color: var(--clr-secondary);
 }
 
 .dropbear-btn-secondary {
-  --button-bg-color: var(--clr-rock-blue);
-  --button-hover-bg-color: var(--clr-silver-sand);
+  --button-bg-color: var(--clr-secondary);
+  --button-hover-bg-color: var(--clr-grey-500);
 }
 
 .dropbear-btn-success {
-  --button-bg-color: var(--clr-pastel-green);
-  --button-hover-bg-color: var(--clr-success-darker);
+  --button-bg-color: var(--clr-success);
+  --button-hover-bg-color: var(--clr-success-light);
 }
 
 .dropbear-btn-information {
-  --button-bg-color: var(--clr-malibu);
-  --button-hover-bg-color: var(--clr-cornflower-blue);
+  --button-bg-color: var(--clr-information);
+  --button-hover-bg-color: var(--clr-information-light);
 }
 
 .dropbear-btn-warning {
-  --button-bg-color: var(--clr-mustard);
-  --button-hover-bg-color: var(--clr-warning-darker);
+  --button-bg-color: var(--clr-warning);
+  --button-hover-bg-color: var(--clr-warning-light);
 }
 
 .dropbear-btn-error {
-  --button-bg-color: var(--clr-persimmon);
-  --button-hover-bg-color: var(--clr-error-darker);
+  --button-bg-color: var(--clr-error);
+  --button-hover-bg-color: var(--clr-error-light);
 }
 
 .dropbear-btn-disabled {
-  --button-bg-color: var(--clr-silver-sand);
-  --button-hover-bg-color: var(--clr-silver-sand);
+  --button-bg-color: var(--clr-grey-500);
+  --button-hover-bg-color: var(--clr-grey-500);
   opacity: 0.6;
   cursor: not-allowed;
 }
