--- a/DropBear.Blazor/Components/Lists/DropBearList.razor
+++ b/DropBear.Blazor/Components/Lists/DropBearList.razor
@@ -1,7 +1,7 @@
 ﻿@typeparam T
 @inherits DropBear.Blazor.Components.Bases.DropBearComponentBase
 
-<div class="drop-bear-list @(IsCollapsed ? "drop-bear-list--collapsed" : "")" style="@($"--header-bg-color: {HeaderColor}")">
+<div class="drop-bear-list @(IsCollapsed ? "drop-bear-list--collapsed" : "")" style="@($"--clr-surface-primary: {HeaderColor}")">
     <div class="drop-bear-list-header" @onclick="ToggleCollapse">
         <h3 class="drop-bear-list-title">
             @if (!string.IsNullOrEmpty(HeaderIcon))
