--- a/DropBear.Blazor/Components/Validation/ValidationErrorsComponent.razor.css
+++ b/DropBear.Blazor/Components/Validation/ValidationErrorsComponent.razor.css
@@ -1,6 +1,6 @@
 ﻿.validation-errors {
   background-color: #fff;
-  border-radius: var(--border-radius-md);
+  border-radius: var(--br-md);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
   overflow: hidden;
@@ -10,7 +10,7 @@
 .validation-errors__header {
   background-color: var(--clr-error);
   color: #fff;
-  padding: calc(var(--spacing-unit) * 1.5);
+  padding: calc(var(--spacing-md) * 1.5);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -23,7 +23,7 @@
   margin: 0;
   display: flex;
   align-items: center;
-  gap: calc(var(--spacing-unit) * 1);
+  gap: calc(var(--spacing-md) * 1);
 }
 
 .validation-errors__icon {
@@ -48,7 +48,7 @@
 }
 
 .validation-errors__item {
-  padding: calc(var(--spacing-unit) * 1.5);
+  padding: calc(var(--spacing-md) * 1.5);
   border-bottom: 1px solid #f0f0f0;
   display: flex;
   align-items: center;
@@ -66,7 +66,7 @@
   justify-content: center;
   width: 24px;
   height: 24px;
-  margin-right: calc(var(--spacing-unit) * 1.5);
+  margin-right: calc(var(--spacing-md) * 1.5);
   flex-shrink: 0;
 }
 
@@ -74,10 +74,10 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: var(--clr-error-lighter);
+  background-color: var(--clr-error-light);
   border-radius: 50%;
   opacity: 0.5;
-  border: 4px solid var(--clr-persimmon);
+  border: 4px solid var(--clr-error);
   box-shadow: 0px 2px 4px rgba(255, 255, 255, 0.75);
 }
 
@@ -94,7 +94,7 @@
 
 .validation-errors__item-parameter {
   font-weight: 600;
-  margin-bottom: calc(var(--spacing-unit) / 2);
+  margin-bottom: calc(var(--spacing-md) / 2);
 }
 
 .validation-errors__item-message {
